#5225, #5252: adjusted project to work with Tigase XMPP Server 7.2.0-SNAPSHOT

--- a/src/main/asciidoc/text/Configuration.asciidoc
+++ b/src/main/asciidoc/text/Configuration.asciidoc
@@ -3,25 +3,31 @@
 :author: Andrzej Wójcik
 :date: 2017-04-09
 
-To enable default set of SPAM filters with default settings you need to enable SessionManager processor +spam-filter+. To do so you need to add +spam-filter+ to comma separated list of enabled processors in `--sm-plugins` property of `etc/init.properties` file.
+To enable default set of SPAM filters with default settings you need to enable SessionManager processor +spam-filter+:
 
 .Enabling default SPAM filters
 [source,properties]
 ----
---sm-plugins=spam-filter
+'sess-man () {
+    'spam-filter' () {}
+}
 ----
 
-== Changing list of active SPAM filters
-You can configure list of active SPAM filters by setting list of comma separate classes implementing `SpamFilter` interface to +spam-filter+ `filter-classes` property.
+== Changing active SPAM filters
+You can configure active SPAM filters by setting enabling and disabling SPAM filters (subbeans of +spam-filter+ processor bean).
 
-.Setting list of active filters
-[source,properties]
+.Enabling +message-same-long-body+ filter
+[source,dsl]
 ----
-plugins-conf/spam-filter/filter-classes[s]=tigase.spam.filters.MessageFilterSameLongBody,tigase.spam.filters.MucMessageFilterEnsureToFullJid
+'sess-man' () {
+    'spam-filter' () {
+        'message-same-long-body' () {}
+    }
+}
 ----
 
-== Sending error when +message+ is dropped
-By default, due to nature of SPAM, you do not want to send error message when SPAM message is dropped as sending error back will:
+== Sending error when packet is dropped
+By default, due to nature of SPAM, you do not want to send error packet when SPAM packet is dropped as sending error back will:
 
 * increase traffic on a server (which in rare cases may lead to overload of a XMPP server)
 * notify spammer that it was not possible to delivery message
@@ -31,7 +37,11 @@ It is possible to configure +spam-filter+ to send error back, by setting +true+ 
 .Allow sending error
 [source,properties]
 ----
-sess-man/plugins-conf/spam-filter/return-error[B]=true
+'sess-man () {
+    'spam-filter' () {
+        return-error = true
+    }
+}
 ----
 
 == Enabling logging of dropped messages
