#5329: added filter to ensure that error message contains <error/> child which is required

--- a/src/main/asciidoc/index.asciidoc
+++ b/src/main/asciidoc/index.asciidoc
@@ -18,4 +18,5 @@ In this section there is a list of available filters and detailed description of
 
 :leveloffset: 2
 include::text/filters/MessageFilterSameLongBody.asciidoc[]
+include::text/filters/MessageErrorFilterEnsureErrorChild.asciidoc[]
 include::text/filters/MucMessageFilterEnsureToFullJid.asciidoc[]
