--- a/src/main/asciidoc/text/filters/KnownSpammersFilter.asciidoc
+++ b/src/main/asciidoc/text/filters/KnownSpammersFilter.asciidoc
@@ -40,3 +40,10 @@ It is possible to request filter to print full list of known spammer which are c
 ----
 sess-man/plugins-conf/spam-filter/known-spammers-print-spammers[B]=true
 ----
+
+== Frequency of printing list of spammers
+By default, list of detected spammers is printed to logs every day. If you wish you can adjust this value to 1 hour, then add following entry to `etc/init.properties` file:
+[source,properties]
+----
+sess-man/plugins-conf/spam-filter/known-spammers-print-spammers-frequency[L]=60
+----
