--- a/src/main/asciidoc/index.asciidoc
+++ b/src/main/asciidoc/index.asciidoc
@@ -8,16 +8,13 @@ Tigase Team <team@tigase.net>
 
 Welcome to Tigase SPAM Filter guide.
 
-:leveloffset: 1
+include::text/Overview.asciidoc[leveloffset=+1]
+include::text/Configuration.asciidoc[leveloffset=+1]
 
-include::text/Overview.asciidoc[]
-include::text/Configuration.asciidoc[]
-
-= Filters
+== Filters
 In this section there is a list of available filters and detailed description of each filtering algorithm.
 
-:leveloffset: 2
-include::text/filters/MessageFilterSameLongBody.asciidoc[]
-include::text/filters/MessageErrorFilterEnsureErrorChild.asciidoc[]
-include::text/filters/MucMessageFilterEnsureToFullJid.asciidoc[]
-include::text/filters/KnownSpammersFilter.asciidoc[]
+include::text/filters/MessageFilterSameLongBody.asciidoc[leveloffset=+2]
+include::text/filters/MessageErrorFilterEnsureErrorChild.asciidoc[leveloffset=+2]
+include::text/filters/MucMessageFilterEnsureToFullJid.asciidoc[leveloffset=+2]
+include::text/filters/KnownSpammersFilter.asciidoc[leveloffset=+2]
