#7090: added support for limiting number of presence subscription requests on per jid basis

--- a/src/main/asciidoc/index.asciidoc
+++ b/src/main/asciidoc/index.asciidoc
@@ -18,3 +18,4 @@ include::text/filters/MessageFilterSameLongBody.asciidoc[leveloffset=+2]
 include::text/filters/MessageErrorFilterEnsureErrorChild.asciidoc[leveloffset=+2]
 include::text/filters/MucMessageFilterEnsureToFullJid.asciidoc[leveloffset=+2]
 include::text/filters/KnownSpammersFilter.asciidoc[leveloffset=+2]
+include::text/filters/PresenceSubscribeFilter.asciidoc[leveloffset=+2]
