Added documentation for implementation of a custom filter #spam-10

--- a/src/main/asciidoc/index.asciidoc
+++ b/src/main/asciidoc/index.asciidoc
@@ -19,3 +19,5 @@ include::text/filters/MessageErrorFilterEnsureErrorChild.asciidoc[leveloffset=+2
 include::text/filters/MucMessageFilterEnsureToFullJid.asciidoc[leveloffset=+2]
 include::text/filters/KnownSpammersFilter.asciidoc[leveloffset=+2]
 include::text/filters/PresenceSubscribeFilter.asciidoc[leveloffset=+2]
+
+include::text/Development.asciidoc[leveloffset=+1]
